src/stylus/clock/color_picker.styl
.color-picker
  margin 0 0 0 auto
  position relative
  z-index 1

.color-picker__toggle
  align-items center
  color var(--link)
  cursor pointer
  display flex
  height var(--header-height)
  justify-content center
  transition color var(--transition), transform var(--transition)
  width var(--button-width)

.color-picker__toggle:focus
.color-picker__toggle:active
[no-touch] .color-picker__toggle:hover
  color var(--link-active)

.color-picker__toggle:active
  transform scale(.8)

.color-picker__icon
  flex 0 0 px_to_rem(20)

.color-picker__menu
  background white
  border-radius px_to_rem(4)
  display grid
  elevation(1)
  grid-gap px_to_rem(8)
  grid-template-columns repeat(4, 1fr)
  list-style none
  margin-top px_to_rem(8)
  opacity 0
  padding px_to_rem(12)
  position absolute
  right px_to_rem(-2)
  transform 'translateY(-%s)' % px_to_rem(12)
  transition opacity var(--transition), transform var(--transition), visibility var(--transition)
  visibility hidden
  z-index -1

  @media Breakpoint.MEDIUM
    margin-top px_to_rem(-2)

[open] > .color-picker__menu
  opacity 1
  transform translateY(0)
  visibility visible
  z-index 1

// Menu arrow via rotated square with a shadow.
.color-picker__menu::before
  background white
  content ''
  display block
  elevation(1)
  height MENU_ARROW
  position absolute
  right MENU_ARROW
  top (- MENU_ARROW / 2)
  transform rotate(45deg)
  width MENU_ARROW

// Cover for bottom half of menu arrow's shadow.
.color-picker__menu::after
  background white
  content ''
  display block
  height MENU_ARROW
  position absolute
  right (MENU_ARROW / 2)
  top 0
  width (MENU_ARROW * 2)

// Place the items above the arrow cover.
.color-picker__item
  z-index 1

.color-picker__label
  display block
  height MENU_ITEM_SIZE
  position relative
  width MENU_ITEM_SIZE

[no-touch] .color-picker__label:hover
  cursor pointer

// Hide each item's radio button and use its label as the hit area.
.color-picker__option
  height 0
  position absolute
  visibility hidden
  width 0

.color-picker__swatch
  align-items center
  border 2px solid white
  border-radius 50%
  color transparent
  display inline-flex
  height MENU_ITEM_SIZE
  justify-content center
  position relative
  width MENU_ITEM_SIZE
  z-index -1

.color-picker__swatch[option=white]
  border-color #eee

.color-picker__option:checked + .color-picker__swatch::after
  border-radius 50%
  content ''
  height px_to_rem(8)
  width px_to_rem(8)
  position absolute

for name, values in ColorPalette
  face_rgb = rgb(values.face)

  .color-picker__swatch[option={name}]
    background '%s' % values.face
  
  .color-picker__option:checked + .color-picker__swatch[option={name}]
    border-color mix(black, face_rgb, 30%)
  
  .color-picker__option:checked + .color-picker__swatch[option={name}]::after
    background '%s' % values.hands

[no-touch] .color-picker__swatch
  transition transform var(--transition)

[no-touch] .color-picker__label:hover .color-picker__option:not(:checked) + .color-picker__swatch
  transform scale(1.1)

